{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "37928af7-4ca0-430a-9675-17a7fe31a478",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "b496211d-5438-42a3-8497-e3342f5fa8c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "295e2001-7f6f-43c2-ba18-0f8891efae85",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9f293afe-5e01-4b1b-924e-66bc1fde88b9",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb20bcb6-9843-4a0c-968d-23facda5cacb",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}